--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "author": "Tomasz Stanisz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "express-validator": "^5.3.1",
     "mongoose": "^5.12.10",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
